--- a/src/app/features/landing/components/Fundacion/fundation/fundation.component.html
+++ b/src/app/features/landing/components/Fundacion/fundation/fundation.component.html
@@ -1,14 +1,33 @@
-<section class="bg-cover bg-center h-screen text-white" style="background-image: url('https://via.placeholder.com/1920x1080');">
+<section class="bg-cover bg-center h-screen text-white" style="background-image: url('https://intervallenato.com/inicio/wp-content/uploads/2024/04/0F9DEC7A-31DC-413E-8242-0019D22A16A6.jpeg');">
     <div class="flex items-center justify-center h-full bg-black bg-opacity-50">
       <div class="text-center">
         <h1 class="text-5xl font-bold mb-4 animate-fade-in">Fundación El Cocha Molina</h1>
         <p class="text-xl mb-8 animate-fade-in-delay">Preservando el legado cultural y artístico del Vallenato</p>
-        <a href="#proposito" class="bg-teal-500 hover:bg-teal-600 text-white font-bold py-3 px-6 rounded-md shadow animate-bounce">
+        <!-- <a href="#proposito" class="bg-teal-500 hover:bg-teal-600 text-white font-bold py-3 px-6 rounded-md shadow animate-bounce">
           Conoce más
-        </a>
+        </a> -->
       </div>
     </div>
   </section>
+ 
+  <section class="py-16 bg-gray-50">
+    <div class="container mx-auto px-6 lg:px-8">
+      <h2 class="text-4xl font-extrabold text-center text-gray-800 mb-12">¿Quiénes somos?</h2>
+      
+      <div class="max-w-4xl mx-auto text-center text-justify">
+        <p class="text-lg text-gray-700 mb-6">
+          La Fundación El Cocha Molina es una organización sin ánimo de lucro comprometida con el bienestar, equilibrio, progreso y felicidad de cada persona a la que brindamos nuestros servicios.
+        </p>
+        <p class="text-lg text-gray-700 mb-6">
+          Desde nuestra creación en 2020, nos hemos dedicado a difundir y preservar el legado cultural y artístico del juglar El Cocha Molina a través de la educación. Lo hacemos mediante la enseñanza única en el mundo del acordeón, utilizando el teclado de un computador. 
+        </p>
+        <p class="text-lg text-gray-700 mb-6">
+          Además, destacamos su significativo aporte a la música vallenata tradicional a través de la exposición en el museo que lleva su nombre ubicado en la ciudad de Valledupar, que recoge su vida y obra.
+        </p>
+      </div>
+    </div>
+  </section>
+  
   <section id="proposito" class="py-16 bg-gray-100">
     <div class="container mx-auto px-6 lg:px-8">
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
@@ -24,45 +43,6 @@
           <h3 class="text-xl font-semibold text-teal-500 mb-4">Visión</h3>
           <p class="text-gray-700">Ser la fundación líder en la preservación y enseñanza de la música vallenata tradicional en el ámbito global.</p>
         </div>
-      </div>
-    </div>
-  </section>
-  <section class="py-16 bg-gray-50">
-    <div class="container mx-auto px-6 lg:px-8">
-      <h2 class="text-4xl font-extrabold text-center text-gray-800 mb-12">Noticias y eventos</h2>
-      
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-        
-        <!-- Tarjeta 1 -->
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300">
-          <img src="https://via.placeholder.com/400x300" alt="Evento 1" class="w-full h-48 object-cover">
-          <div class="p-6">
-            <h3 class="text-2xl font-semibold text-gray-800 mb-2">Evento 1</h3>
-            <p class="text-gray-600 mb-4">Detalles sobre el evento o noticia. Este evento es muy importante y tendrá un gran impacto.</p>
-            <a href="#" class="text-teal-500 hover:text-teal-700 font-semibold">Leer más</a>
-          </div>
-        </div>
-  
-        <!-- Tarjeta 2 -->
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300">
-          <img src="https://via.placeholder.com/400x300" alt="Evento 2" class="w-full h-48 object-cover">
-          <div class="p-6">
-            <h3 class="text-2xl font-semibold text-gray-800 mb-2">Evento 2</h3>
-            <p class="text-gray-600 mb-4">Otro evento significativo con detalles fascinantes que no querrás perderte.</p>
-            <a href="#" class="text-teal-500 hover:text-teal-700 font-semibold">Leer más</a>
-          </div>
-        </div>
-  
-        <!-- Tarjeta 3 -->
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300">
-          <img src="https://via.placeholder.com/400x300" alt="Evento 3" class="w-full h-48 object-cover">
-          <div class="p-6">
-            <h3 class="text-2xl font-semibold text-gray-800 mb-2">Evento 3</h3>
-            <p class="text-gray-600 mb-4">Descubre más sobre este evento y cómo puedes participar.</p>
-            <a href="#" class="text-teal-500 hover:text-teal-700 font-semibold">Leer más</a>
-          </div>
-        </div>
-  
       </div>
     </div>
   </section>
