--- a/src/app/features/landing/components/Museo/museo/museo.component.html
+++ b/src/app/features/landing/components/Museo/museo/museo.component.html
@@ -1,6 +1,6 @@
-<section class="relative h-[90vh] w-full overflow-hidden">
+<section class="relative h-[30vh] md:h-[90vh] w-full overflow-hidden">
     <!-- Video de fondo -->
-    <video autoplay muted loop playsinline class="absolute inset-0 h-full w-full object-cover object-center md:object-cover md:object-top transform scale-125 md:scale-100">
+    <video autoplay muted loop playsinline class="video-background absolute inset-0 h-full w-full md:object-cover ">
         <source src="assets/video/museo.mp4" type="video/mp4">
         Tu navegador no soporta la etiqueta de video.
     </video>
@@ -11,17 +11,12 @@
         <div class="flex-grow"></div>
 
         <!-- Botones y Fecha en la misma línea -->
-        <div class="flex flex-col md:flex-row justify-between items-center">
-            <div class="mb-4 md:mb-0">
-                <a href="#" class="inline-block px-6 md:px-8 py-2 md:py-3 border border-white text-white font-semibold hover:bg-white hover:text-black transition duration-300">
-                    COMPRAR TICKETS
-                </a>
-            </div>
+        <div class="flex flex-row justify-left items-center space-x-4">
+            <a href="#" class="inline-block px-6 md:px-8 py-2 md:py-3 border border-white text-white font-semibold hover:bg-white hover:text-black transition duration-300">
+                COMPRAR TICKETS
+            </a>
 
-            <div class="text-center md:text-right text-gray-300 text-sm md:text-base">
-                <p>28.08.24 8:50:59 AM</p>
-                <p>MUSEO EL COCHA MOLINA</p>
-            </div>
+         
         </div>
     </div>
 
