--- a/src/app/features/landing/components/Museo/museo/museo.component.html
+++ b/src/app/features/landing/components/Museo/museo/museo.component.html
@@ -1,6 +1,6 @@
 <section class="relative h-[30vh] md:h-[90vh] w-full overflow-hidden">
     <!-- Video de fondo -->
-    <video autoplay muted loop playsinline class="video-background absolute inset-0 h-full w-full md:object-cover ">
+    <video #videoRef autoplay muted loop playsinline class="video-background absolute inset-0 h-full w-full md:object-cover">
         <source src="assets/video/museo.mp4" type="video/mp4">
         Tu navegador no soporta la etiqueta de video.
     </video>
@@ -15,8 +15,6 @@
             <a href="#" class="inline-block px-6 md:px-8 py-2 md:py-3 border border-white text-white font-semibold hover:bg-white hover:text-black transition duration-300">
                 COMPRAR TICKETS
             </a>
-
-         
         </div>
     </div>
 
