--- a/src/app/features/landing/components/Museo/museo/museo.component.css
+++ b/src/app/features/landing/components/Museo/museo/museo.component.css
@@ -10,3 +10,12 @@
         transform: scale(1); /* Vuelve el video a su tamaño normal en pantallas más grandes */
     }
 }
+
+
+/* acordeon-model.component.css */
+:host {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  
