--- a/src/app/features/landing/components/Museo/museo/museo.component.html
+++ b/src/app/features/landing/components/Museo/museo/museo.component.html
@@ -65,7 +65,7 @@
             <!-- Conservación Cultural -->
             <div class="flex flex-col items-center bg-white p-6 rounded-lg shadow-lg">
                 <div class="w-16 h-16 mb-4">
-                    <img src="https://via.placeholder.com/100" alt="Icono Conservación" class="w-full h-full">
+                    <img src="https://enciclopedia.net/wp-content/uploads/2013/08/Cultura.png" alt="Icono Conservación" class="w-full h-full">
                 </div>
                 <h3 class="text-xl font-semibold mb-4">Conservación Cultural</h3>
                 <p class="text-gray-600">
@@ -76,7 +76,7 @@
             <!-- Documentación y Archivo -->
             <div class="flex flex-col items-center bg-white p-6 rounded-lg shadow-lg">
                 <div class="w-16 h-16 mb-4">
-                    <img src="https://via.placeholder.com/100" alt="Icono Documentación" class="w-full h-full">
+                    <img src="https://www.comunidadbaratz.com/wp-content/uploads/2020/11/Un-documento-de-Archivo-es-una-expresion-testimonial-de-caracter-objetivo.jpg" alt="Icono Documentación" class="w-full h-full">
                 </div>
                 <h3 class="text-xl font-semibold mb-4">Documentación y Archivo</h3>
                 <p class="text-gray-600">
@@ -87,7 +87,7 @@
             <!-- Educación y Difusión -->
             <div class="flex flex-col items-center bg-white p-6 rounded-lg shadow-lg">
                 <div class="w-16 h-16 mb-4">
-                    <img src="https://via.placeholder.com/100" alt="Icono Educación" class="w-full h-full">
+                    <img src="https://previews.123rf.com/images/colorfuelstudio/colorfuelstudio2001/colorfuelstudio200100679/138517311-feliz-lindo-ni%C3%B1o-ni%C3%B1o-y-ni%C3%B1a-di%C3%A1logo.jpg" alt="Icono Educación" class="w-full h-full">
                 </div>
                 <h3 class="text-xl font-semibold mb-4">Educación y Difusión</h3>
                 <p class="text-gray-600">
@@ -98,7 +98,7 @@
             <!-- Investigación Cultural -->
             <div class="flex flex-col items-center bg-white p-6 rounded-lg shadow-lg">
                 <div class="w-16 h-16 mb-4">
-                    <img src="https://via.placeholder.com/100" alt="Icono Investigación" class="w-full h-full">
+                    <img src="https://www.compilatio.net/media/cache/blog_main/2023/01/6188-visuels-d-entete-de-blog-1.png" alt="Icono Investigación" class="w-full h-full">
                 </div>
                 <h3 class="text-xl font-semibold mb-4">Investigación Cultural</h3>
                 <p class="text-gray-600">
@@ -109,7 +109,7 @@
             <!-- Promoción de Nuevos Talentos -->
             <div class="flex flex-col items-center bg-white p-6 rounded-lg shadow-lg">
                 <div class="w-16 h-16 mb-4">
-                    <img src="https://via.placeholder.com/100" alt="Icono Talentos" class="w-full h-full">
+                    <img src="https://www.zeropsicologos.com/blog/wp-content/uploads/2022/02/descubrir-talentos.jpg" alt="Icono Talentos" class="w-full h-full">
                 </div>
                 <h3 class="text-xl font-semibold mb-4">Promoción de Nuevos Talentos</h3>
                 <p class="text-gray-600">
@@ -120,7 +120,7 @@
             <!-- Exhibiciones Permanentes -->
             <div class="flex flex-col items-center bg-white p-6 rounded-lg shadow-lg">
                 <div class="w-16 h-16 mb-4">
-                    <img src="https://via.placeholder.com/100" alt="Icono Exhibiciones" class="w-full h-full">
+                    <img src="https://previews.123rf.com/images/pcanzo/pcanzo1210/pcanzo121000041/15616448-una-caricatura-que-representa-unos-marcos-vac%C3%ADos-en-un-museo-con-etiquetas-en-blanco-de-oro.jpg" alt="Icono Exhibiciones" class="w-full h-full">
                 </div>
                 <h3 class="text-xl font-semibold mb-4">Exhibiciones Permanentes</h3>
                 <p class="text-gray-600">
