--- a/src/app/features/landing/components/home/header/header.component.html
+++ b/src/app/features/landing/components/home/header/header.component.html
@@ -21,19 +21,29 @@
         <a routerLink="/Huellas-del-Maestro/museum" class="block md:inline-block hover:text-blue-500 px-3 py-2">Museo</a>
     </div>
 
-    <!-- Botón de llamar -->
-    <div [ngClass]="{'hidden': !isMenuOpen, 'flex': isMenuOpen, 'md:flex': true}" class="w-full md:w-auto px-2 py-2 md:rounded">
+    <!-- Botones de Llamar e Iniciar Sesión -->
+    <div [ngClass]="{'hidden': !isMenuOpen, 'flex': isMenuOpen, 'md:flex': true}" class="w-full md:w-auto flex justify-end items-center space-x-4 px-2 py-2 md:rounded">
         <a href="tel:+123" class="block text-right md:inline-block">
-            <div class="flex justify-center md:justify-end">
-                <div class="flex items-center h-10 w-auto rounded-md bg-[#c8a876] text-white font-medium p-2">
-                    <!-- Icono de teléfono -->
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="w-6 h-6 mr-2">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 01-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 00-1.091-.852H4.5A2.25 2.25 0 002.25 4.5v2.25z" />
-                    </svg>
-                    Llamar
-                </div>
+            <div class="flex items-center h-10 w-auto rounded-md bg-[#c8a876] text-white font-medium p-2">
+                <!-- Icono de teléfono -->
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="w-6 h-6 mr-2">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 01-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 00-1.091-.852H4.5A2.25 2.25 0 002.25 4.5v2.25z" />
+                </svg>
+                Llamar
+            </div>
+        </a>
+
+        <a routerLink="/Platform/login" class="block text-right md:inline-block">
+            <div class="flex items-center h-10 w-auto rounded-md bg-[#007bff] text-white font-medium p-2">
+                <!-- Icono de usuario -->
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="w-6 h-6 mr-2">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M15.75 9a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.5 19.5a8.25 8.25 0 1115 0H4.5z" />
+                </svg>
+                Iniciar Sesión
             </div>
         </a>
     </div>
